# sec_db

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  graph_bid_extraction_goal.md  pyproject.toml  seeds.csv
calibration/: verifier_seed.jsonl
docs/: design.md  llm-interface.md  prior-pipeline-lessons.md  spec.md
linkflow_probe/: __init__.py  __main__.py  cli.py  client.py  runner.py  sanitize.py  schemas.py
quality_reports/: 2026-05-04_ref9-refactor-baseline.md  2026-05-04_ref9_schema_freeze_session_log.md
ralph/: prd.json
scripts/: fetch_filings.py  reference9_matrix.py
tests/: test_actor_relations_schema.py  test_agent_roles.py  test_applicability_obligations.py  test_calibration.py  test_canonical_compile.py  test_claim_disposition_gate.py  test_cli_dispatch.py  test_cli_run_synthetic.py  test_corpus_cost_envelope.py  test_coverage_semantics.py  test_coverage_states.py  test_deal_room_schema.py  test_derived_judgments.py  test_edgar.py  test_event_subtypes_schema.py  test_evidence_source_truth.py  test_exports.py  test_extract_llm_disabled.py  test_extract_rules_real_examples.py  test_extract_rules_smoke.py  test_filing_atlas.py  test_hard_reset_schema.py  test_human_decisions.py  test_ingest_examples.py  test_judgments_two_axis.py  test_latest_pointer.py  test_lifecycle.py  test_linkflow_adapter.py  test_linkflow_live.py  test_linkflow_parallel.py  test_llm_interface.py  test_llm_p7_contract.py  test_llm_p8_contract.py  test_llm_windows.py  test_matrix_report.py  test_no_deal_specific_scaffolds.py  test_orchestrator_vertical_slice.py  test_package.py  (+22 more)
(+593 files in other folders)
